correction taille des textes = erreur de classe Toujours le problème de l'allignement du entre le texte et les images plusieurs choses différentes essayé comme mettre l'allignement dans le main au lieu de section, cela marche mais impacte enormement la mise en page de la version mobile
Validateur html et CSS validé

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,13 +62,8 @@ main {
     line-height: 1.2; /* Espacement entre les lignes */
 }
 
-main h2 span {
-    display: block; /* Le texte dans le span apparaît sur une nouvelle ligne */
-    color: #1bd79e; /* Couleur verte pour les mots importants */
-}
-
 /* Styles pour tous les span */
-main h2 span {
+span {
     color: #1bd79e; /* Couleur verte pour tous les span */
 }
 
